--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-title: Find Your Spirit Animal
-hero: Find your spirit animal
-subtitle: The animal friendly clothing company
+title: Embrace Your Special One with a Special Present
+hero: Embrace Your Special One with a Special Present
+subtitle: A Personal Wishing-WebSite dedicated to your buddy, friend, love or family.
 ---
 
 <div class="content" id="products">
