added changes to the index file, config file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: Embrace Your Special One with a Special Present
-hero: Embrace Your Special One with a Special Present
+title: CryingBaby
+hero: Personalized Wishing-Website for your Loved Ones
 subtitle: A Personal Wishing-WebSite dedicated to your buddy, friend, love or family.
 ---
 
