--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ subtitle: A Personal Wishing-WebSite dedicated to your buddy, friend, love or fa
 								{{ product.description_markdown | truncate: 45 | markdownify }}
 							</div>
 							<p>${{ product.price }}</p>
-							<script type="text/javascript">amzn_assoc_ad_type ="responsive_search_widget"; amzn_assoc_tracking_id ="cryingbaby-21"; amzn_assoc_marketplace ="amazon"; amzn_assoc_region ="IN"; amzn_assoc_placement =""; amzn_assoc_search_type = "search_widget";amzn_assoc_width ="auto"; amzn_assoc_height ="auto"; amzn_assoc_default_search_category ="Baby"; amzn_assoc_default_search_key ="clothes";amzn_assoc_theme ="light"; amzn_assoc_bg_color ="FFFFFF"; </script><script src="//z-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&Marketplace=IN"></script>
+							<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=cryingbaby-21&marketplace=amazon&amp;region=IN&placement=B07SF2TBP6&asins=B07SF2TBP6&linkId=298668af041e6d9d951e42c240584098&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
 						</div>
 					</li>
 				{% endfor %}
